2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* Makefile.am: Managed texteditor is now standard - the gtksourceview1&2 are
	  now optional.

2008-02-06  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Tidy up
	  commenting/uncommenting code, using atomic undos, and fix "Bug 325469 -
	  Comment and uncomment function".
	* MonoDevelop.SourceEditor.addin.xml: Fix command IDs for comment/uncomment.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Coneverted
	  comment/uncomment to the more common toggle comment logic.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Implemented
	  Bug 323946 - Undo/Redo functionality are not context sensitive.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs,
	  MonoDevelop.SourceEditor/EditorCommands.cs,
	  MonoDevelop.SourceEditor.addin.xml: Use new print infrastructure.

2008-01-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: clipboard handler
	  delete now works without a selection.

2008-01-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs,
	  MonoDevelop.SourceEditor/EditorCommands.cs: Moved some text editor
	  commands to the ide: bookmarks, goto line number and goto matching
	  brace.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Update MD version.

2008-01-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui.OptionPanels/BehaviorTextEditorPanel.cs:
	  Ensure we don't create subclasses of classes with private fields bound