@@ -1,3 +1,11 @@
+2008-03-06  Michael Hutchinson  <mhutchinson@novell.com> 
+
+	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs:
+	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
+	* MonoDevelop.SourceEditor/Services.cs:
+	* MonoDevelop.SourceEditor.Gui.Dialogs/GotoLineNumberDialog.cs:
+	  Track API changes to get the GtkSourceView2 editor building again. 
+
 2008-02-09  Mike Krüger <mkrueger@novell.com> 
 
 	* Makefile.am: Managed texteditor is now standard - the gtksourceview1&2 are
